Fixed typo in Impact font in SASS files.

--- a/templates/en-us/sass/Clubs_by_filename.sass
+++ b/templates/en-us/sass/Clubs_by_filename.sass
@@ -59,7 +59,7 @@ ul.nav_bar
     padding: 15px 0 0 0
     color: $orange
     text-shadow: none
-    font-family: impact
+    font-family: $impact_font
     font-weight: normal
     font-size: 170%
   div.keyword
