--- a/templates/en-us/sass/layout_styles.sass
+++ b/templates/en-us/sass/layout_styles.sass
@@ -37,7 +37,7 @@ $text_box_bg_dark: #d6d6d6
 $padding = 20px
 
 // More info on fonts: http://doctype.com/arial-equivalent-ubuntu
-$impact_font: unquote("impact, arial black, sans-serif")
+$impact_font: unquote('Impact,"Arial Black",sans-serif')
 $elegant_font: unquote('Palatino,Georgia,"Times New Roman",serif')
 $sans_serif:  unquote("'Helvetica Neue','HelveticaNeue','bitstream vera sans','Nimbus Sans L','trebuchet ms','segoe ui','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro W3','メイリオ',Meiryo,'ＭＳ Ｐゴシック','MS PGothic',sans-serif")
 $ui_sans:     unquote("'Nimbus Sans L','segoe ui',sans-serif")
