Alternatives for Impact font on Ubuntu + MacOS.

--- a/templates/en-us/sass/layout_styles.sass
+++ b/templates/en-us/sass/layout_styles.sass
@@ -11,7 +11,7 @@ $pink: #ff477c
 $highlight: #ffff99
 $light_highlight: #ffffcc
 $dashed_border: #003860
-$drop_shadow_on_white = #E1E1E1
+$drop_shadow_on_white: #E1E1E1
 
 $cloud_blue: #33ccff
 $dark_blue: #214d81
@@ -34,10 +34,10 @@ $text_box_border_green: #38761b
 $text_box_bg: #eaeaf0
 $text_box_bg_dark: #d6d6d6
 
-$padding = 20px
+$padding: 20px
 
 // More info on fonts: http://doctype.com/arial-equivalent-ubuntu
-$impact_font: unquote('Impact,"Arial Black",sans-serif')
+$impact_font: unquote('Impact,"Arial Black",Haettenschweiler,"Arial Narrow Bold","Century Schoolbook L",serif')
 $elegant_font: unquote('Palatino,Georgia,"Times New Roman",serif')
 $sans_serif:  unquote("'Helvetica Neue','HelveticaNeue','bitstream vera sans','Nimbus Sans L','trebuchet ms','segoe ui','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro W3','メイリオ',Meiryo,'ＭＳ Ｐゴシック','MS PGothic',sans-serif")
 $ui_sans:     unquote("'Nimbus Sans L','segoe ui',sans-serif")
